--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "@sanity/client": "^5.3.2",
     "@sanity/image-url": "^1.0.2",
